# modbus-tcp-py-sample

./: README.md  pyproject.toml
src/modbus_tcp_py_sample/: __init__.py
src/modbus_tcp_py_sample/1-minimal/: client.py  server.py
src/modbus_tcp_py_sample/2-read_coils/: client.py  server.py
src/modbus_tcp_py_sample/3-read_holding_registers/: client.py  server.py
src/modbus_tcp_py_sample/4-write_coils/: client.py  server.py
src/modbus_tcp_py_sample/5-add_float/: client.py
src/modbus_tcp_py_sample/6-polling-thread/: client.py  server.py
